[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypt32"
version = "1.0.0"
description = "The official library for the 'crypt32' cipher"
readme = "README.md"
authors = [{ name="Johnathan31", email="ab1049669@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/johnathan31/crypt32"

